[metadata]
name = dbeasy_py
version = 0.0.1
author = Bruno Wanderson
author_email = brunowanderson8@gmail.com
description = A package to facilitate the use of the database.
long_description = file: README.md
long_description_content_type = text/markdown
url = 

classifiers =
    Progaming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independet

[options]
package_dir = scr
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src